# rust-workshop-2-rp2040

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
