[package]
name = "mobica-workshop-2"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
cyw43-pio = "0.1.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics"] }
embassy-sync = "0.5.0"
embassy-time = "0.3.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
fastrand = { version = "2.1.1", default-features = false }
heapless = { version = "0.8.0", features = ["defmt-03"] }
libm = "0.2.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
